categoria celular terminada
gg

--- a/comercio2/categoria_celulares.html
+++ b/comercio2/categoria_celulares.html
@@ -168,17 +168,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="content">
     	<div class="content_top">
     		<div class="heading">
-    		<h3>Nuevos Productos</h3>
+    		<h3>Nuevos Smartphones</h3>
     		</div>
     		<div class="see">
-    			<p><a href="#">Ver todos los productos</a></p>
+    			<p><a href="#">Smartphone</a></p>
     		</div>
     		<div class="clear"></div>
     	</div>
 	      <div class="section group">
 				<div class="grid_1_of_4 images_1_of_4">
-					 <a href="preview.html"><img src="images/celulares/samsung_j7_1.jpg" alt="" /></a>
-					 <h2>Celular Samsung J7</h2>
+					 <a href="preview_cel_samsung_j7.html"><img src="images/celulares/samsung_j7_1.jpg" alt="" /></a>
+					 <h2>Celular Samsung J7 64GB</h2>
 					<div class="price-details">
 				       <div class="price-number">
 							<p><span class="rupees">$249.990</span></p>
@@ -191,41 +191,41 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					 
 				</div>
 				<div class="grid_1_of_4 images_1_of_4">
-					<a href="preview.html"><img src="images/notebooks/asus_X456UB_1.jpg" alt="" /></a>
-					 <h2>Notebook ASUS X456UB</h2>
+					<a href="preview_iphone.html"><img src="images/celulares/iphone.png" alt="" /></a>
+					 <h2>APPLE IPHONE 6S PLUS 64GB</h2>
 					<div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">$529.990</span></p>
+							<p><span class="rupees">$799.990</span></p>
 					    </div>
 					       		<div class="add-cart">								
-									<h4><a href="preview_asus_X456UB.html">Descripción</a></h4>
+									<h4><a href="preview_iphone.html">Descripción</a></h4>
 							     </div>
 							 <div class="clear"></div>
 					</div>
 				    
 				</div>
 				<div class="grid_1_of_4 images_1_of_4">
-					<a href="preview.html"><img src="images/consolas/ps4_uncharted_1.png" alt="" /></a>
-					 <h2>Consola PS4 + Uncharted: TNDC </h2>
+					<a href="preview_mototercera.html"><img src="images/celulares/motogter.png" alt="" /></a>
+					 <h2>Moto G Tercera generacion Smart </h2>
 					 <div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">$329.890</span></p>
+							<p><span class="rupees">169.990</span></p>
 					    </div>
 					       		<div class="add-cart">								
-									<h4><a href="preview_ps4_uncharted.html">Descripción</a></h4>
+									<h4><a href="preview_mototercera.html">Descripción</a></h4>
 							     </div>
 							 <div class="clear"></div>
 					</div>
 				</div>
 				<div class="grid_1_of_4 images_1_of_4">
-					<a href="preview.html"><img src="images/tv/led_lg_1.jpg" alt="" /></a>
-					 <h2>LED LG 49" LH5100</h2>
+					<a href="preview_huawei.html"><img src="images/celulares/huawei.png" alt="" /></a>
+					 <h2>HUAWEI SMARTPHONE P8 LITE NEGRO</h2>
 					<div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">$299.990</span></p>
+							<p><span class="rupees">$149.990</span></p>
 					    </div>
 					       		<div class="add-cart">								
-									<h4><a href="preview_led_lg.html">Descripción</a></h4>
+									<h4><a href="preview_huawei.html">Descripción</a></h4>
 							     </div>
 							 <div class="clear"></div>
 					</div>				     
@@ -233,7 +233,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="content_bottom">
     		<div class="heading">
-    		<h3>Cararteristicas Productos</h3>
+    		<h3>Economicos</h3>
     		</div>
     		<div class="see">
     			<p><a href="#">Ver todos los productos</a></p>
@@ -242,53 +242,53 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     	</div>
 			<div class="section group">
 				<div class="grid_1_of_4 images_1_of_4">
-					 <a href="preview.html"><img src="images/new-pic1.jpg" alt="" /></a>					
-					 <h2>Camara Panasonic Modelo Ng-50</h2>
+					 <a href="preview_arcatel.html"><img src="images/celulares/arcatel.png" alt="" /></a>					
+					 <h2>ALCATEL SMARTPHONE PIXI 4 3.5 NEGRO</h2>
 					<div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">$200.000</span></p>
+							<p><span class="rupees">$29.990</span></p>
 					    </div>
 					       		<div class="add-cart">								
-									<h4><a href="preview.html">Descripción</a></h4>
+									<h4><a href="preview_arcatel.html">Descripción</a></h4>
 							     </div>
 							 <div class="clear"></div>
 					</div>
 				</div>
 				<div class="grid_1_of_4 images_1_of_4">
-					<a href="preview.html"><img src="images/new-pic2.jpg" alt="" /></a>
-					 <h2>SubWoofer 5.1 Max 58w Hight </h2>
+					<a href="preview_lenovo.html"><img src="images/celulares/lenovo.png" alt="" /></a>
+					 <h2>LENOVO SMARTPHONE A2010 NEGRO PW/h2>
 					 <div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">$200.000</span></p>      
+							<p><span class="rupees">$109.990<</span></p>      
 					    </div>
 					       		<div class="add-cart">								
-									<h4><a href="preview.html">Descripción</a></h4>
+									<h4><a href="preview_lenovo.html">Descripción</a></h4>
 							     </div>
 							 <div class="clear"></div>
 					</div>
 				</div>
 				<div class="grid_1_of_4 images_1_of_4">
-					<a href="preview.html"><img src="images/new-pic4.jpg" alt="" /></a>
-					 <h2>Led Panasonic N-500 Full HD </h2>
+					<a href="preview_motog.html"><img src="images/celulares/motog.png" alt="" /></a>
+					 <h2>MOTOROLA SMARTPHONE MOTO G 3ERA GENERACIÓN </h2>
 					<div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">$400.000</span></p>
+							<p><span class="rupees">$129.000</span></p>
 					    </div>
 					       		<div class="add-cart">								
-									<h4><a href="preview.html">Descripción</a></h4>
+									<h4><a href="preview_motog.html">Descripción</a></h4>
 							     </div>
 							 <div class="clear"></div>
 					</div>
 				</div>
 				<div class="grid_1_of_4 images_1_of_4">
-				 <a href="preview.html"><img src="images/new-pic3.jpg" alt="" /></a>
-					 <h2>Sub Woofer Bose alta calidad sonido</h2>					 
+				 <a href="preview_lg.html.html"><img src="images/celulares/lg.png" alt="" /></a>
+					 <h2>LG SMARTPHONE G4 STYLUS DORADO</h2>					 
 					 <div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">$350.000</span></p>
+							<p><span class="rupees">$149.000</span></p>
 					    </div>
 					       		<div class="add-cart">								
-									<h4><a href="preview.html">Descripción</a></h4>
+									<h4><a href="preview_lg.html">Descripción</a></h4>
 							     </div>
 							 <div class="clear"></div>
 					</div>
