--- a/comercio2/index.html
+++ b/comercio2/index.html
@@ -96,7 +96,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="categories">
 				  <ul>
 				   <h3>Categorias</h3>
-				      <li><a href="#">Telefonos Moviles</a></li>
+				      <li><a href="categoria_celulares.html">Telefonos Moviles</a></li>
 				      <li><a href="#">Notebook & PC</a></li>
 				      <li><a href="#">Consolas</a></li>
 				        <li><a href="#">Electro Hogar</a></li>
