--- a/comercio2/categoria_videojuegos.html
+++ b/comercio2/categoria_videojuegos.html
@@ -205,7 +205,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    
 				</div>
 				<div class="grid_1_of_4 images_1_of_4">
-					<a href="consolas_psvita.html"><img src="images/celulares/motogter.png" alt="" /></a>
+					<a href="consolas_psvita.html"><img src="images/consolas/psvita.png" alt="" /></a>
 					 <h2>SONY CONSOLA PS VITA + GOW COLLECTION</h2>
 					 <div class="price-details">
 				       <div class="price-number">
